# Fast-Api-Users

./: .gitignore  docker-compose.yml  pyproject.toml
actions/: create_super_user.py
src/: main.py
src/alembic/versions/: 2025_11_03_0036-acb87e66913b_create_user_table.py  2025_11_04_0041-f283533f402a_create_user_table.py  2025_11_04_0155-9021794b81eb_create_access_token_table.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  auth.py  fastapi_users_routers_helper.py  messages.py  users.py
src/api/dependencies/: access_tokens.py  backend.py  strategy.py  user_manager.py
src/api/dependencies/authentication/: strategy.py  user_manager.py  users.py
src/core/: config.py  types.py
src/core/authentication/: user_manager.py
src/core/models/: __init__.py  access_token.py  base_model.py  db_helper.py  user.py
src/core/schemas/: users.py
src/crud/: users.py
