[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.3"}
pydantic-settings = "^2.11.0"
sqlalchemy = {extras = ["asincio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.1"
orjson = "^3.11.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^15.0.1"}

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
